<resources>
    <string name="app_name">SwinEdu</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="action_settings">Settings</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="pickrole">Pick Role</string>
    <string name="classes">Classes</string>
    <string name="swinedustudent">SwinEdu Student</string>
    <string name="teacher">Teacher</string>
    <string name="student">Student</string>
    <string name="orloginwith">Or login with: </string>
    <string name="noaccount">No Account Yet? Create one</string>
    <string name="alreadyhave">Already have account? Login</string>
    <string name="classmembers">%1$s Members</string>
    <string name="title_activity_teacher_class">Members</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_student_class">StudentClassActivity</string>
</resources>
