<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mac.swinedu.LoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.Toolbar
            android:id="@+id/login_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/blue"
            android:elevation="4dp"
            android:theme="@style/ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="32dp"
            app:srcCompat="@drawable/books"/>

        <EditText
            android:id="@+id/email_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_address"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:padding="15dp"
            android:background="@drawable/edittext_login"/>

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password"
            android:layout_marginLeft="@dimen/fab_margin"
            android:textColor="@color/blue"
            android:textSize="15dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:padding="15dp"
            android:background="@drawable/edittext_login_password"/>

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button"
            android:layout_margin="@dimen/fab_margin"
            android:textSize="15dp"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:text="@string/login"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/aside1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/orloginwith"
                android:layout_centerInParent="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:textColor="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_toLeftOf="@id/aside1"
                android:layout_centerVertical="true"
                android:background="@color/white"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_toRightOf="@id/aside1"
                android:layout_centerVertical="true"
                android:background="@color/white"/>
        </RelativeLayout>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_marginTop="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/create_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noaccount"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/white"/>
    </LinearLayout>

</ScrollView>
